--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
   "bugs": {
     "url": "https://github.com/beckojr/node_example/issues"
   },
-  "homepage": "https://github.com/beckojr/node_example#readme"
+  "homepage": "https://github.com/beckojr/node_example#readme",
+  "dependencies": {
+    "express": "^4.18.1"
+  },
+  "type": "module"
 }
