--- a/package.json
+++ b/package.json
@@ -22,7 +22,14 @@
   },
   "homepage": "https://github.com/beckojr/node_example#readme",
   "dependencies": {
-    "express": "^4.18.1"
+    "axios": "^0.26.1",
+    "body-parser": "^1.19.2",
+    "connect-mongo": "^4.6.0",
+    "express": "^4.17.3",
+    "express-session": "^1.17.3",
+    "mongoose": "^6.2.8",
+    "nodemon": "^2.0.15",
+    "regex": "^0.1.1"
   },
   "type": "module"
 }
