--- a/package.json
+++ b/package.json
@@ -22,13 +22,15 @@
   },
   "homepage": "https://github.com/beckojr/node_example#readme",
   "dependencies": {
+    "@google/maps": "^1.1.3",
     "axios": "^0.26.1",
     "body-parser": "^1.19.2",
     "connect-mongo": "^4.6.0",
     "express": "^4.17.3",
     "express-session": "^1.17.3",
+    "googlemaps": "^1.12.0",
     "mongoose": "^6.2.8",
-    "nodemon": "^2.0.15",
+    "nodemon": "^2.0.20",
     "regex": "^0.1.1"
   },
   "type": "module"
